# ChangeLog for sys-libs/talloc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/talloc/ChangeLog,v 1.24 2011/06/02 17:56:29 vostorga Exp $

  08 Jun 2011; Nathan Phillip Brink <binki@gentoo.org> talloc-2.0.5.ebuild,
  +files/talloc-2.0.5-waf-multilib.patch:
  Add waf hack, fixes compilation on portage-multilib with abi-wrapped
  python-config executables.

  02 Jun 2011; Víctor Ostorga <vostorga@gentoo.org> talloc-2.0.5.ebuild:
  Adding dependency dev-lang/python[threads] bug 363071

  16 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> talloc-2.0.5.ebuild:
  Stop unnecessarily forcing Python 2.6.

  15 Mar 2011; Víctor Ostorga <vostorga@gentoo.org> talloc-2.0.5.ebuild:
  Fixing collision with /usr/lib/libtalloc.so.2 bug #351608 setting python
  2.6 as runtime python bug #354587 #357269

  01 Mar 2011; Jonathan Callen <abcd@gentoo.org> talloc-2.0.5.ebuild:
  Add ~amd64-linux/~x86-linux keywords

*talloc-2.0.5 (13 Jan 2011)

  13 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> +talloc-2.0.5.ebuild:
  Add new talloc version. NOTE: doc xsl file is fetched from net rather than
  using the system one, this needs to be fixed.

  27 Sep 2010; Mart Raudsepp <leio@gentoo.org> talloc-2.0.1-r1.ebuild:
  Marked ~mips for bug #285952

  12 Aug 2010; Joseph Jezak <josejx@gentoo.org> talloc-2.0.1-r1.ebuild:
  Marked ppc/ppc64 stable for bug #300158.

  17 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org>
  talloc-2.0.1-r1.ebuild, +files/talloc-2.0.1-respect-ldflags.patch:
  Respect LDFLAGS. Fixes bug 323497. Thanks Andreis Vinogradovs
  <spamslepnoga@inbox.ru> for report.

  05 Jun 2010; Raúl Porcel <armin76@gentoo.org> talloc-2.0.1-r1.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #300158

  19 May 2010; Jeroen Roovers <jer@gentoo.org> talloc-2.0.1-r1.ebuild:
  Stable for HPPA (bug #300158).

  18 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  talloc-2.0.1-r1.ebuild:
  x86 stable wrt bug #300158
