@@ -4,34 +4,24 @@ Hash: SHA256
 AUX talloc-2.0.0-without-doc.patch 556 RMD160 1eabff0f27530719c46e88bdae7934bbdbcd7884 SHA1 dfafebbf8d2196525333dbf3df03d948b82b9845 SHA256 536ebde695f0a403354ce3e75e83ca551ba37e849cb7a4d3d2f4e256dba98639
 AUX talloc-2.0.1-respect-ldflags.patch 492 RMD160 1233d53b869dd82beec873d191420962508bb3db SHA1 88d7c569a0525683476f664cdcc23cd201daed5e SHA256 1132281334d1a888c934811f27b818d706b1a5e73133bbd5a9e5fa99a7cec89d
 AUX talloc-2.0.5-waf-multilib.patch 781 RMD160 ec7762b419bcb688b77b0616c3c67b0d15c827f0 SHA1 6bf5924662717c9c31b337ba701d5bb9970473ba SHA256 dcaca956627915351657842e0aebb9b70a4420d5cafaeebf712564ba6fd8a818
-DIST talloc-1.3.0.tar.gz 229969 RMD160 770c3c1f7c0e3f08d3b5906454b9d32dd90f0f2e SHA1 58aff3b238bc0125017b4096ecb7c56a5057e6e4 SHA256 80e5d639496e1aac0838a5ae98c883dda9233c235bf51acb9f436776c7dcf824
-DIST talloc-1.3.1.tar.gz 234087 RMD160 1c58328694da837f287c5635499393fa4698e359 SHA1 fba0f9b581683022ddae63df0a1e48fd2eb0d9a4 SHA256 be02b19327fff77030c9a207774e65513e1cc3d3d65c9803634504f76beb1ecc
-DIST talloc-2.0.0.tar.gz 241971 RMD160 72dcb5c0fa8ab180bc701dda27fb115b95d2907c SHA1 a824446ffb3836149df2a16092054ea17d6dc6f8 SHA256 349ac60bcc296aa56832ddfebe7d219d05fc3b8af65cf64ad97d551a6e7d7569
-DIST talloc-2.0.1.tar.gz 242426 RMD160 b6d28a9f913c5d3abe2098d8b571bd293156ae1c SHA1 40453d01e3676832150cefe0a057835d3a847ac1 SHA256 5b810527405f29d54f50efd78bf2c89e318f2cd8bed001f22f2a1412fd27c9b4
 DIST talloc-2.0.5.tar.gz 365388 RMD160 6a4aafb3829d3de2d25c70025329476790d3d857 SHA1 8ec391304954f1a201b0f2239f4505d93da36cf7 SHA256 b949eb0c4f3467ef26bb8f6af64da3b20df5e34b4243fe2a5a0c28435ba6b32a
-EBUILD talloc-1.3.0.ebuild 1064 RMD160 f7901a906acee7da79c1299a4dcf8dde39fea13c SHA1 6f41299246637a2c95b97277aa4ee1e9d157c9fa SHA256 133b381447515fa9739b0645d2cbfffb59e64d3c2b2ed7fab1034ff0fe51a88e
-EBUILD talloc-1.3.1.ebuild 1064 RMD160 a055d90792bb9f115497ab2f6d9618d539b7fc55 SHA1 a93b25ca2f198442e5a9434d84c6ab164de21f9b SHA256 3a555ae5531bee0c0373603d142253abf31ecd9076fc1f309dcf011faaca43f4
-EBUILD talloc-2.0.0-r1.ebuild 1233 RMD160 9f5d47a66e60903d2d5a04a3616240f732a38cb0 SHA1 bd1722659526c12c2004253aa5930cbff603b419 SHA256 6f74ccac49d70581b6cfe15787757b17aa046b9a3ce6772fc91c1e1308de7109
-EBUILD talloc-2.0.0.ebuild 1196 RMD160 459d3e3bce4863cb54843f7defd3cc7cd6cda841 SHA1 0747c77d2d180f2ed193f75a2eaf3c0f212a912d SHA256 d3b23afefe8f5f50f20a117c7c77e8c736c31e66e94552bcc7b8c16ed0b1fce0
-EBUILD talloc-2.0.1-r1.ebuild 1532 RMD160 8ee7135601964612f60334c00c0a551fff860419 SHA1 376884f5e7dd472151c37276b0d402983ccc3da9 SHA256 21b7321c14abc15320b98e9f4eb6562ed1a887926e288560426753b35d423107
-EBUILD talloc-2.0.1.ebuild 1235 RMD160 c541820a899452fb09f6cc9ca4c7f0f22abb7fd3 SHA1 4452a09e7ef669ec996280178190481a839982c7 SHA256 ceaf0d529aef94ec4139d47aee73f7b620a423f4ffe3f4a1f50458aca8d5ca0f
 EBUILD talloc-2.0.5.ebuild 2971 RMD160 50b430273f25a102dde20101fee87a1f66556d70 SHA1 8d740f475dad15c926903b5eeb63e5d34b029835 SHA256 d87e9c7dc6cf05bf573729f4e6842f3817043fc32421f1185085889f4bf1f863
-MISC ChangeLog 3979 RMD160 2e5759e91ca5542d03d6bb80cfceaca806793101 SHA1 4d1ead050acb70f9168e4697ee833233db204dd2 SHA256 1ad9bec1284aa8a7d8e46f0b7a043d47b5ba190314d4a39b77bb9098055084e4
+MISC ChangeLog 4221 RMD160 4e9ed61696f358e3127196ef791f42ab284695d9 SHA1 6d62354122b124bbcc19ef445a96609ccaf65616 SHA256 2d179b606a8fe478a62df1972ad5cadb981fbca22ef1a030af11268fc20492e2
 MISC metadata.xml 412 RMD160 bc4ce1becbf6d6dbf2eef283f818d97e6d8ff4cd SHA1 9535124e040cf03a385425627b3622c06d97bf06 SHA256 732d4c39c6e7ddd2d4768724ae637ebadb6abff069fd3cf16d41778cf9f9c9dc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJN7wL1AAoJEHQ6UuhrqBBQD0UQAKcbFB9zv6CREwmDp6LnUveQ
-Hsib0zrjtHjwiZAkg32u6WyHuWr/pS57Q3tAlKuIsqXRR0KdjTlOIkExY8wpcjyM
-VeuJznogNREMGqIrWqBVJSXCavCpKLtvkCFOfxU6J8ITPEigiP/TGJqiwA3hjiPu
-aMLn+lCCLaduv75C7t5FmdAidCmtKsVwuUk0IAQuW4TUjLs9ZJDWZVopkG3dqLjk
-jJHITFRDqyPrjCGfMj/eNYnW2/I4ZAYFp92zZUscLjdG94aI5KFxJOecsRxVOMne
-whJ8TVg9djPAI83nTW81lHwDZHtdy0+Wu9ibbNKht6oBo0GNv8y6EQA8mN+Psv69
-d8C3qdAZZ5l72M/Ez1C1EU1rCpTFR1hpunVYbetHjIbdiL6LFV1LwzXc7UPAdLPo
-PaLc0dTZhic/4pG8zEbgGZZ0fpCpIKpnElP7zkb2DtKQZcVB6fK5AxQu8u4Daw6H
-YtqwKvrvsjq1C7FSrZNDdBITAzeKXRfPnT1CFpe0ga+g9mBMaOy3rv5CWKu2KNCf
-fvDyGAYdrw2Z5Rs0h+Wlexw4Eaj9sjmkK8rjul+9+dwlNZZDimv9I+HBhMAgOcLc
-B7IldH2nl3df6pGAx+wIuSg73JBRkGbKcJCVcmyiGgUkj7EqGOGSm98+rYwOawJn
-7puXqOoJrZ7D/JK5Sc63
-=lugV
+iQIcBAEBCAAGBQJN7wMyAAoJEHQ6UuhrqBBQZ/sP/1qu3hqS2Xr8UwTk03pUQYHH
+omWgRLJ4H5ZFzn9izUlEMUkN+/pS1pblqanD4/XjFpYT8HqUODFmv5cHSDL2yuOr
+8DiYKXcJKULgVxcrC1HhDg2bfvhy19Cas2N/K56F6SuT78TpRJxOZP0nU/xHJHfj
+iw97taVUstYlTf5xBFDxBvbgraf8S/aQPOJr4hnhyXTy2hZgkL3e97Jl265Hq9tB
+foXTF7nl00cVMkrFhnMF+a4ZcuEHizZqJ6bAD2J/MnxCqJKNxFfu37Pnk2Rjv/p/
+8xsuBRepBJC4cHGk7SxWMLFCBfcbr4mtLm5m4xGInUzCIp3Gr++foh5jiA9NLPV8
+wwz6OKVj9saIvgMWm9JCYrCntyHJw/1ZxrvSew62AaDxBwkE9EtX6TFcKBGcd223
+fET9tHgc9Gbaa/VsYi/xlQvOwegj5GdAf0XXjW82a0BWEe7wpbeCxTzIsd8Luxv6
+UKRo7w8j0rZKooJ8qyUh5Wj1OkUzjVOVCLWzHXyj+y0dBiu6mVZN65XQzQO3jzB3
+p4zFjtYbPg/UB13vE8ySJIelv2rXHcDL8KvnDW6DU/y+oNTkHbAeAGfQolxPPna4
+WcdXHLrujTZ7rBT6lYAxsLdjtWwWFtoSCUjzrIEwP7DqjEkm7bFU+CSs175XYBvV
+2o1UVxxF6r0axokUM7ZO
+=lU1T
 -----END PGP SIGNATURE-----
